# arangodb_datasets

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: analyze.yml  build.yml  release.yml
arango_datasets/: __init__.py  datasets.py  importer.py  utils.py
tests/: __init__.py  conftest.py  test.py  test_.py  test_datasets.py  test_main.py
